# rdo-time-management-system

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
resources/: time_logs.csv  users.csv
scripts/: mongodb_backup.sh  run_tests.sh  setup.sh
src/time_management_system/: __init__.py  database.py  logger.py  schemas.py
tests/: __init__.py  test_database.py  tms_data_generator.py
